--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,9 @@ body {
   align-items: center;
   min-height: 100vh;
 }
+
+.wrapper .loader {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 0 20px;
+}
