--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,11 @@ body {
   justify-content: space-evenly;
   padding: 0 20px;
 }
+
+.loader .loading {
+  background: white;
+  width: 30px;
+  height: 30px;
+  border-radius: 50px;
+  margin: 0 10px;
+}
