--- a/styles.css
+++ b/styles.css
@@ -27,4 +27,20 @@ body {
   height: 30px;
   border-radius: 50px;
   margin: 0 10px;
+  animation: load 0.8s ease infinite;
+}
+
+@keyframes load {
+  0% {
+    width: 30px;
+    height: 30px;
+  }
+  50% {
+    width: 15px;
+    height: 15px;
+  }
+  100% {
+    width: 30px;
+    height: 30px;
+  }
 }
