--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,19 @@ body {
   animation: load 0.8s ease infinite;
 }
 
+.loader .loading.one {
+  animation-delay: 0.3s;
+}
+.loader .loading.two {
+  animation-delay: 0.4s;
+}
+.loader .loading.three {
+  animation-delay: 0.5s;
+}
+.loader .loading.four {
+  animation-delay: 0.6s;
+}
+
 @keyframes load {
   0% {
     width: 30px;
